--- a/config/mainwindow5.ui
+++ b/config/mainwindow5.ui
@@ -78,7 +78,7 @@ p, li { white-space: pre-wrap; }
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -748,6 +748,16 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="1" column="0" colspan="3">
+             <widget class="QLabel" name="label_6">
+              <property name="text">
+               <string>Select or enter path of .out file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0" colspan="3">
+             <widget class="QLineEdit" name="openOutFileLineEdit"/>
+            </item>
             <item row="2" column="3">
              <widget class="QPushButton" name="openOutFileButton">
               <property name="text">
@@ -759,6 +769,13 @@ p, li { white-space: pre-wrap; }
              <widget class="QLabel" name="label_43">
               <property name="text">
                <string>Select or enter path of .wf file:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0" colspan="3">
+             <widget class="QLineEdit" name="openWfFileLineEdit">
+              <property name="readOnly">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -779,7 +796,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="6" column="2">
+            <item row="6" column="0">
              <spacer name="verticalSpacer_14">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -808,43 +825,52 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="0" colspan="3">
-             <widget class="QLabel" name="label_6">
-              <property name="text">
-               <string>Select or enter path of .out file:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0" colspan="3">
-             <widget class="QLineEdit" name="openWfFileLineEdit">
-              <property name="readOnly">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0" colspan="3">
-             <widget class="QLineEdit" name="openOutFileLineEdit"/>
-            </item>
             <item row="8" column="0" colspan="3">
              <widget class="QLabel" name="label_42">
               <property name="text">
-               <string>To view transmission graphs, load a Plato .csv file:</string>
+               <string>To view transmission graphs, load a .csv file:</string>
               </property>
              </widget>
             </item>
-            <item row="19" column="0" colspan="3">
-             <widget class="QLabel" name="label_49">
+            <item row="9" column="0" colspan="3">
+             <widget class="QLabel" name="label_5">
               <property name="text">
-               <string>To plot gamma vs. energy vs. transmission:</string>
+               <string>Select or enter path of .csv file:</string>
               </property>
              </widget>
             </item>
-            <item row="20" column="0" colspan="2">
-             <widget class="QLabel" name="label_50">
+            <item row="10" column="0" colspan="3">
+             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
+            </item>
+            <item row="10" column="3">
+             <widget class="QPushButton" name="openCsvFileButton">
               <property name="text">
-               <string>Load .csv directory</string>
+               <string>Open</string>
               </property>
              </widget>
+            </item>
+            <item row="11" column="0" colspan="2">
+             <widget class="QPushButton" name="transExecuteLoadedButton">
+              <property name="text">
+               <string>Execute</string>
+              </property>
+             </widget>
+            </item>
+            <item row="12" column="0">
+             <spacer name="verticalSpacer_15">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>50</height>
+               </size>
+              </property>
+             </spacer>
             </item>
             <item row="13" column="0" colspan="4">
              <widget class="Line" name="line_6">
@@ -859,19 +885,6 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="10" column="3">
-             <widget class="QPushButton" name="openCsvFileButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="21" column="0" colspan="3">
-             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
-            </item>
-            <item row="15" column="0" colspan="3">
-             <widget class="QLineEdit" name="openDirLineEdit"/>
-            </item>
             <item row="14" column="0" colspan="3">
              <widget class="QLabel" name="label_46">
               <property name="text">
@@ -879,12 +892,8 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="9" column="0" colspan="3">
-             <widget class="QLabel" name="label_5">
-              <property name="text">
-               <string>Select or enter path of .csv file:</string>
-              </property>
-             </widget>
+            <item row="15" column="0" colspan="3">
+             <widget class="QLineEdit" name="openDirLineEdit"/>
             </item>
             <item row="15" column="3">
              <widget class="QPushButton" name="openDirButton">
@@ -900,34 +909,8 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="17" column="2">
+            <item row="17" column="0">
              <spacer name="verticalSpacer_30">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeType">
-               <enum>QSizePolicy::Fixed</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>50</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="10" column="0" colspan="3">
-             <widget class="QLineEdit" name="openCsvFileLineEdit"/>
-            </item>
-            <item row="11" column="0" colspan="2">
-             <widget class="QPushButton" name="transExecuteLoadedButton">
-              <property name="text">
-               <string>Execute</string>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="2">
-             <spacer name="verticalSpacer_15">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
               </property>
@@ -955,17 +938,27 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="25" column="1">
-             <widget class="QLineEdit" name="gammaStartLineEdit">
+            <item row="19" column="0" colspan="3">
+             <widget class="QLabel" name="label_49">
               <property name="text">
-               <string>0</string>
+               <string>To plot gamma vs. energy vs. transmission:</string>
               </property>
              </widget>
             </item>
-            <item row="24" column="0" colspan="3">
-             <widget class="QLabel" name="label_51">
+            <item row="20" column="0" colspan="2">
+             <widget class="QLabel" name="label_50">
               <property name="text">
-               <string>Alternatively generate from displayed molecule:</string>
+               <string>Load .csv directory</string>
+              </property>
+             </widget>
+            </item>
+            <item row="21" column="0" colspan="3">
+             <widget class="QLineEdit" name="gammaOpenDirLineEdit"/>
+            </item>
+            <item row="21" column="3">
+             <widget class="QPushButton" name="openDirGammaButton">
+              <property name="text">
+               <string>Open</string>
               </property>
              </widget>
             </item>
@@ -976,21 +969,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="25" column="0">
-             <widget class="QLabel" name="label_52">
-              <property name="text">
-               <string>Gamma minimum:</string>
-              </property>
-             </widget>
-            </item>
-            <item row="21" column="3">
-             <widget class="QPushButton" name="openDirGammaButton">
-              <property name="text">
-               <string>Open</string>
-              </property>
-             </widget>
-            </item>
-            <item row="23" column="0">
+            <item row="23" column="1">
              <spacer name="verticalSpacer_31">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -1006,31 +985,52 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
-            <item row="27" column="0">
-             <widget class="QLabel" name="label_54">
+            <item row="24" column="0" colspan="3">
+             <widget class="QLabel" name="label_51">
               <property name="text">
-               <string>Number of steps</string>
+               <string>Alternatively generate from displayed molecule:</string>
               </property>
              </widget>
             </item>
-            <item row="27" column="1">
-             <widget class="QLineEdit" name="gammaStepsLineEdit">
+            <item row="25" column="0" colspan="2">
+             <widget class="QLabel" name="label_52">
               <property name="text">
-               <string>10</string>
+               <string>Gamma minimum:</string>
               </property>
              </widget>
             </item>
-            <item row="26" column="1">
+            <item row="25" column="2">
+             <widget class="QLineEdit" name="gammaStartLineEdit">
+              <property name="text">
+               <string>0</string>
+              </property>
+             </widget>
+            </item>
+            <item row="26" column="0" colspan="2">
+             <widget class="QLabel" name="label_53">
+              <property name="text">
+               <string>Gamma maximum:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="26" column="2">
              <widget class="QLineEdit" name="gammaEndLineEdit">
               <property name="text">
                <string>2</string>
               </property>
              </widget>
             </item>
-            <item row="26" column="0">
-             <widget class="QLabel" name="label_53">
+            <item row="27" column="0" colspan="2">
+             <widget class="QLabel" name="label_54">
               <property name="text">
-               <string>Gamma maximum:</string>
+               <string>Number of steps</string>
+              </property>
+             </widget>
+            </item>
+            <item row="27" column="2">
+             <widget class="QLineEdit" name="gammaStepsLineEdit">
+              <property name="text">
+               <string>10</string>
               </property>
              </widget>
             </item>
@@ -1041,7 +1041,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="29" column="0">
+            <item row="29" column="1">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
